--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     </h1>
     <h1 class="Text" style="display: none;">Đây là lời xin lỗi của anh đến em. Nếu anh có làm điều gì khiến em phải chờ
         đợi thì xin em hãy
-        thông cảm :((. Anh xin lỗi vì đã làm em phải chờ đợi. Anh sẽ cố gắng hơn nữa để không làm em phải chờ đợi
-        nữa. <br>
+        thông cảm :((. Anh xin lỗi vì đã làm em phải chờ đợi. Anh sẽ cố gắng hơn nữa để không làm em phải chờ đợi<br>
     </h1>
     <br>
 
